Remove old link sharing feature
